--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -48,6 +48,13 @@ jobs:
         needs: build
 
         steps:
+            - name: Login to Azure
+              uses: azure/login@v2
+              with:
+                  client-id: ${{ secrets.CLIENTID }}
+                  tenant-id: ${{ secrets.TENANTID }}
+                  subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID }}
+
             - name: Deploy multi-container app
               uses: azure/webapps-deploy@v2
               with:
