--- a/nginx.conf
+++ b/nginx.conf
@@ -29,7 +29,7 @@ http {
     }
 
     location /prometheus/ {
-      proxy_pass http://prometheus:9090/;
+      proxy_pass http://localhost:9090/;
     }
   }
 }
