--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,9 @@
 services:
     prometheus:
-        image: prom/prometheus:latest
+        build:
+            context: .
+            dockerfile: Dockerfile.prometheus
         container_name: prometheus
-        volumes:
-            - ./prometheus.yml:/etc/prometheus/prometheus.yml
         ports:
             - "9090:9090"
 
@@ -17,12 +17,12 @@ services:
             - "3000:3000"
 
     nginx:
-        image: nginx:latest
+        build:
+            context: .
+            dockerfile: Dockerfile.nginx
         container_name: nginx
         ports:
             - "5000:80"
-        volumes:
-            - ./nginx.conf:/etc/nginx/nginx.conf:ro
         depends_on:
             - prometheus
             - grafana
