localhost to container names

--- a/nginx.conf
+++ b/nginx.conf
@@ -7,7 +7,7 @@ http {
   }
 
   upstream grafana {
-    server localhost:3000;
+    server grafana:3000;
   }
 
   server {
@@ -29,7 +29,7 @@ http {
     }
 
     location /prometheus/ {
-      proxy_pass http://localhost:9090/;
+      proxy_pass http://prometheus:9090/;
     }
   }
 }
